# PruebaTecnicaOneCore

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Documentacion.txt  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep
docs/: API_SPEC.md  ARCHITECTURE.md  DEVELOPMENT.md
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
openspec/changes/onecore-prueba-tecnica/: design.md  proposal.md  spec.md  state.yaml  tasks.md
src/: __init__.py  main.py
src/application/: dependencies.py  exception_handlers.py
src/application/schemas/: auth.py  documents.py  events.py  files.py  result.py  system.py
src/config/: __init__.py  settings.py
src/domain/: exceptions.py
src/domain/models/: __init__.py  csv_upload.py  document.py  event.py  user.py
src/domain/ports/: __init__.py  csv_repository.py  document_ai.py  document_repository.py  event_repository.py  file_storage.py  user_repository.py
src/domain/services/: __init__.py  auth_service.py  document_analysis_service.py  event_service.py  file_upload_service.py
src/infrastructure/: di.py
src/infrastructure/ai/: __init__.py  (+4 more)
src/web/: router.py
tests/: conftest.py
tests/integration/: test_auth_api.py
tests/unit/: test_auth_service.py  test_document_analysis_service.py  test_event_service.py  test_file_upload_service.py
(+56 files in other folders)
