[project]
name = "prueba-tecnica"
version = "0.1.0"
description = "OneCore Technical Evaluation System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pyodbc>=5.1.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "boto3>=1.35.0",
    "openai>=1.50.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.5.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "pytesseract>=0.3.10",
    "pypdfium2>=4.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff.lint]
select = ["E", "F", "I"]
